mysql-dialect 增加函数 2.0.2-m4

--- a/.gitignore
+++ b/.gitignore
@@ -30,72 +30,5 @@ docs/contributing.md
 
 # Jenv local setting
 .java-version
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-AntSupport-231.9392.1+973.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-ByteCodeViewer-231.9392.1+986.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.android.tools.idea.smali-231.9392.1+610.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.copyright-231.9392.1+587.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.gradle-231.9392.1+429.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.java-231.9392.1+62.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.platform.images-231.9392.1+290.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.properties-231.9392.1+489.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.jetbrains.performancePlugin-231.9392.1+900.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-Coverage-231.9392.1+329.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-Git4Idea-231.9392.1+439.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-intellij.webp-231.9392.1+584.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-JUnit-231.9392.1+570.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.intellij.groovy-231.9392.1+286.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.intellij.intelliLang-231.9392.1+613.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.android-231.9392.1+581.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.idea.gradle.dsl-231.9392.1+137.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.idea.maven.model-231.9392.1+941.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.idea.maven.server.api-231.9392.1+727.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.idea.maven-231.9392.1+871.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.idea.reposearch-231.9392.1+31.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.kotlin-231.9392.1+587.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.kotlin-231-1.8.21-IJ9392.1+587.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.jetbrains.plugins.gradle-231.9392.1+516.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.toml.lang-231.9392.1+158.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-TestNG-J-231.9392.1+561.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-training-231.9392.1+228.xml
-/.intellijPlatform/localPlatformArtifacts/bundledPlugin-XPathView-231.9392.1+745.xml
-/.kotlin/metadata/kotlinCInteropLibraries/test-cinterop-sqlite-NoFfOA.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/app.cash.paging-paging-common-3.1.1-0.3.1-commonMain-3d2jUw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/app.cash.paging-paging-common-3.1.1-0.3.1-nativeMain-3d2jUw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/app.cash.paging-paging-common-3.1.1-0.3.1-nonJsMain-3d2jUw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/app.cash.paging-paging-common-3.1.1-0.3.1-nonJvmMain-3d2jUw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/app.cash.paging-paging-runtime-uikit-3.1.1-0.3.1-iosMain-Yt04ag.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/app.cash.turbine-turbine-1.1.0-commonMain-jbEv0A.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-sqliter-driver-1.3.1-appleMain-jZj4Kg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-sqliter-driver-1.3.1-linuxMain-VZ9feg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-sqliter-driver-1.3.1-nativeCommonMain-VZ9feg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-common-1.2.5-commonMain-PI_Euw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-common-1.2.5-nativeCommonMain-PI_Euw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-1.2.5-commonMain-JxSiGQ.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-1.2.5-darwinMain-4z42qA.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-1.2.5-nativeCommonMain-JxSiGQ.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-2.1.0-androidNativeMain-t1ZQYw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-2.1.0-appleMain-oa7GPg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-2.1.0-commonMain-t1ZQYw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-2.1.0-linuxMain-t1ZQYw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-concurrency-2.1.0-nativeMain-t1ZQYw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-iso-collections-1.2.5-commonMain-tWzmOw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-isolate-1.2.5-commonMain-e6g96A.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-isolate-1.2.5-nativeCommonMain-e6g96A.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-strict-2.1.0-commonMain-dKdBGA.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-stately-strict-2.1.0-nativeMain-dKdBGA.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-testhelp-0.6.12-commonMain-dS8Nfg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/co.touchlab-testhelp-0.6.12-nativeMain-dS8Nfg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlin-kotlin-stdlib-2.0.20-commonMain-WPEnbA.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlin-kotlin-test-2.0.20-annotationsCommonMain-NjL0Sw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlin-kotlin-test-2.0.20-assertionsCommonMain-NjL0Sw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-atomicfu-0.23.1-commonMain-wFq7cg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-atomicfu-0.23.1-nativeMain-wFq7cg.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-atomicfu-0.24.0-commonMain-TbVmHQ.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-atomicfu-0.24.0-nativeMain-TbVmHQ.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-core-1.9.0-commonMain-ENDfhw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-core-1.9.0-concurrentMain-ENDfhw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-core-1.9.0-nativeDarwinMain-a-dA-A.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-core-1.9.0-nativeMain-ENDfhw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-core-1.9.0-nativeOtherMain-ENDfhw.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-test-1.9.0-commonMain-P2q3fQ.klib
-/.kotlin/metadata/kotlinTransformedMetadataLibraries/org.jetbrains.kotlinx-kotlinx-coroutines-test-1.9.0-nativeMain-P2q3fQ.klib
+/.intellijPlatform/
+/.kotlin/
